# agent-research-lab

./: .env.example  .gitignore  README.md  ROADMAP.md  config.yml  pyproject.toml
.github/workflows/: test.yml
docs/: REASONING.md  architecture.md  decision_logic.md  failure_handling.md  validation_logic.md
examples/: README.md
examples/01_rsi_bollinger_tested_2025/: input.md  report.json  report.md  summary.json  thesis.json  trace.jsonl  transcript.txt
examples/02_rsi_profitable_or_overhyped/: input.md  report.json  report.md  summary.json  thesis.json  trace.jsonl  transcript.txt
examples/03_rsi_divergence_xauusd/: input.md  report.json  report.md  summary.json  thesis.json  trace.jsonl  transcript.txt
examples/04_alphainsider_promo_walkthrough/: input.md  report.json  report.md  summary.json  trace.jsonl  transcript.txt
examples/05_orb_acceptance_short_no_claims/: input.md  report.json  report.md  summary.json  trace.jsonl  transcript.txt
examples/06_orb_pine_strategy_backtest/: input.md  report.json  report.md  strategy_orb-c1.pine  summary.json  thesis.json  trace.jsonl
examples/07_ict_key_levels_educational/: input.md  report.json  report.md  summary.json  trace.jsonl
examples/08_spy_200sma_support_holds/: input.md  report.json  report.md  summary.json  thesis.json  trace.jsonl  transcript.txt
knowledge/: store.jsonl
scripts/: build_examples.py  test_orb.py
src/agent_research_lab/: __init__.py  config.py  llm.py  mcp_client.py  orchestrate.py  pine.py  report.py  summarize.py  telegram_bot.py  thesis.py  transcript.py  types.py  validate.py  watchlist.py
src/trading_hypothesis_lab/: __init__.py  config.py  knowledge.py  llm.py  mcp_client.py  orchestrate.py  pine.py  report.py  summarize.py  telegram_bot.py  thesis.py  transcript.py  types.py  watchlist.py
tests/: test_pine.py  test_pipeline.py
